# blog_backend

./: .env  .gitignore  Cargo.toml
blog/: test.html
migrations/2021-07-28-094234_create_posts/: up.sql
src/: api.rs  main.rs  router.rs
src/db/: mod.rs  models.rs  schema.rs
