[package]
name = "ll"
version = "0.1.0"
authors = ["Kat0w1ce <kato.szy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2"
actix-cors="0.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
actix-files = "0.5.0"
r2d2 = "0.8.9"
r2d2-diesel="1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt=""
actix-multipart = "0.3.0"
futures="0.3.16"